[gd_scene load_steps=4 format=3 uid="uid://dullvym7qwpht"]

[ext_resource type="Script" uid="uid://bcr76dhugwtl8" path="res://addons/2d_shapes/shapes/Ellipse.gd" id="1_ofe4b"]
[ext_resource type="Script" uid="uid://ddrcm4ohkxath" path="res://scenes/Spells/Fireball/fireball_aoe.gd" id="1_qn4at"]

[sub_resource type="CircleShape2D" id="CircleShape2D_l3vjg"]
radius = 532.0038

[node name="FireballAOE" type="Area2D"]
script = ExtResource("1_qn4at")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_l3vjg")
debug_color = Color(0.7699836, 0.44548792, 1.92523e-07, 0.41960785)

[node name="Ellipse" type="Node2D" parent="."]
position = Vector2(-0.02810669, 0)
script = ExtResource("1_ofe4b")
size = Vector2(1064.0381, 1064.0381)
circle = true
style = 2
fill_color = Color(0.9189754, 0.5111001, 0, 0.44705883)
outline_color = Color(0.87657875, 0.57371205, 0.23986569, 1)
metadata/_custom_type_script = "uid://bcr76dhugwtl8"

[node name="DmgCooldown" type="Timer" parent="."]
wait_time = 0.2
one_shot = true

[node name="Lifetime" type="Timer" parent="."]
wait_time = 2.5
autostart = true

[connection signal="timeout" from="DmgCooldown" to="." method="_on_dmg_cooldown_timeout"]
[connection signal="timeout" from="Lifetime" to="." method="_on_lifetime_timeout"]
